--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,9 +13,31 @@
 
 </head>
 <body>
+<br>
+<br>
+
+<center><ul class="pagination">
+    <li><a href="/">1</a></li>
+    <li><a href="/page2">2</a></li>
+    <li><a href="/page3">3</a></li>
+    <li><a href="/page4">4</a></li>
+    <li><a href="/page5">5</a></li>
+    <li><a href="/page6">6</a></li>
+    <li><a href="/page7">7</a></li>
+    <li><a href="/page8">8</a></li>
+    <li><a href="/page9">9</a></li>
+    <li><a href="/page10">10</a></li>
+    <li><a href="/page11">11</a></li>
+    <li><a href="/page12">12</a></li>
+    <li><a href="/page13">13</a></li>
+    <li><a href="/page14">14</a></li>
+    <li><a href="/page15">15</a></li>
+    <li><a href="/page16">16</a></li>
+    <li><a href="/page17">17</a></li>
+    <li><a href="/page18">18</a></li>
+</ul></center>
 
 <div class="container">
-    <h2>Etherium</h2>
     <table class="table table-striped">
         <thead>
         <tr>
@@ -49,13 +71,7 @@
     </table>
 </div>
 
-<ul class="pagination">
-    <li><a href="/">1</a></li>
-    <li><a href="/page2">2</a></li>
-    <li><a href="#">3</a></li>
-    <li><a href="#">4</a></li>
-    <li><a href="#">5</a></li>
-</ul>
+
 
 </body>
 </html>
