moved the database connection into controller.js

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,7 +43,7 @@
         <tr>
             <th>Date</th>
             <th>Price</th>
-            <th>Market Cap Value</th>
+            <th>Total Market Cap Value</th>
             <th>Transactions</th>
 
 
